fix visible scroll corner in safari

--- a/src/components/ModalPage/ModalPage.css
+++ b/src/components/ModalPage/ModalPage.css
@@ -47,6 +47,7 @@
 }
 
 .ModalPage__content-wrap {
+  position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
